# simple_chat

./: CMakeLists.txt  chatmessage.cpp  chatmessage.h  client.cpp  client.h  connection.cpp  connection.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  msgprocessor.cpp  msgprocessor.h  server.cpp  server.h
